# fortuna

./: .clippy.toml  .gitignore  Cargo.toml  wasm-build.sh  wasm-serve.sh
assets/: fortuna.ldtk
graphics/: character.aseprite  game-jam-tileset.psd  jump-anim.aseprite  palette.aseprite  player.aseprite  tileset.aseprite  vfx.aseprite  walk-anim.aseprite
src/: character_menu.rs  game.rs  lib.rs  loading.rs  lose_menu.rs  main.rs  main_menu.rs  score.rs  stats.rs  ui.rs  utils.rs  win_menu.rs
src/game/: bouncer.rs  camera.rs  depression.rs  events.rs  goal.rs  goo.rs  input.rs  mod.rs  obstacles.rs  player.rs  setup.rs  sfx.rs  vfx.rs
wasm/: index.html
