[package]
name = "doup-fortuna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.6.1"
bevy_asset_loader = "0.9.0"
bevy_ecs_ldtk = { version = "0.2.0", features = ["atlas"] }
bevy-inspector-egui = "0.8.2"
bevy_framepace = "0.3.0"
benimator = "2.2.0"
rand = "0.8.5"
