[package]
name = "doup-fortuna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"
bevy_asset_loader = { version = "0.10.0", features = ["2d"] }
bevy_ecs_ldtk = { version = "0.3.0", features = ["atlas"] }
bevy-inspector-egui = "0.10.0"
bevy_framepace = "0.4.0"
benimator = "3.0.0"
rand = "0.8.5"
